# dowload_photos

./: .gitignore  README.txt  config.yml  pyproject.toml
dowload_photos/: config.py  main.py  t.py
dowload_photos/db/: db.py  models.py
tests/: test_dowload_photos.py
